fix: set overflow-x to auto, to only display the scroll bar when necessary.

--- a/styles/index.css
+++ b/styles/index.css
@@ -56,7 +56,7 @@ h1 {
   grid-template-columns: repeat(5, 1fr);
   column-gap: 1em;
   justify-items: center;
-  overflow-x: scroll;
+  overflow-x: auto;
   line-height: 3em;
 }
 
